--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,15 @@
-Flask==3.0.0
-Flask-CORS==4.0.0
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
 python-dotenv==1.0.0
+aiohttp==3.10.11
+requests==2.32.3
+pytz==2023.3
+
+# Dependencies for opower library
+aiozoneinfo>=0.1
+arrow>=1.2
+cryptography>=43.0.0
+pyotp>=2.0
+aiozoneinfo
+arrow
+cryptography
