--- a/electricity-tracker/package.json
+++ b/electricity-tracker/package.json
@@ -14,6 +14,7 @@
     "next": "15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
