--- a/electricity-tracker/package.json
+++ b/electricity-tracker/package.json
@@ -15,7 +15,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
