--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ python-dotenv==1.0.0
 aiohttp==3.10.11
 requests==2.32.3
 pytz==2023.3
+slowapi==0.1.9
 
 # Install patched version of opower
 -e ./opower
