--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && apt-get install -y \
 # Copy application code
 COPY . .
 
-COPY requirements.txt .
+RUN ls
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Expose port
