--- a/electricity-tracker/package.json
+++ b/electricity-tracker/package.json
@@ -12,6 +12,7 @@
     "@types/recharts": "^1.8.29",
     "date-fns": "^4.1.0",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
