--- a/electricity-tracker/tsconfig.json
+++ b/electricity-tracker/tsconfig.json
@@ -19,7 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@electricity-tracker/shared": ["../packages/shared/src"],
+      "@electricity-tracker/shared/*": ["../packages/shared/src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
