--- a/electricity-tracker-mobile/tsconfig.json
+++ b/electricity-tracker-mobile/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@electricity-tracker/shared": ["../packages/shared/src"],
+      "@electricity-tracker/shared/*": ["../packages/shared/src/*"]
+    }
   }
 }
