--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -2,9 +2,9 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "lib": ["ES2020"],
+    "lib": ["ES2020", "DOM"],
     "jsx": "react",
-    "declaration": "true",
+    "declaration": true,
     "declarationMap": true,
     "outDir": "./dist",
     "rootDir": "./src",
