fixing code sharing

--- a/electricity-tracker/tsconfig.json
+++ b/electricity-tracker/tsconfig.json
@@ -24,6 +24,6 @@
       "@electricity-tracker/shared/*": ["../packages/shared/src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "../packages/shared/src/**/*"],
   "exclude": ["node_modules"]
 }
